# education_remove_me

./: README.md
AdventOfCode/2015/day01/: p1.cpp  readme.txt  sample.txt
AdventOfCode/2017/day1/: p1.cpp  p2.cpp
AdventOfCode/2017/day10/: input-part1.txt  p1.cpp  p2.cpp
AdventOfCode/2017/day11/: p1.cpp
AdventOfCode/2017/day12/: p1.cpp
AdventOfCode/2017/day2/: p1.cpp  p1.py  p2.cpp
AdventOfCode/2017/day3/: p1-att2.cpp  p1.cpp  p2.cpp
AdventOfCode/2017/day4/: p1.cpp  p2.cpp
AdventOfCode/2017/day5/: p1.cpp  p2.cpp
AdventOfCode/2017/day6/: p1.cpp
AdventOfCode/2017/day7/: p1.cpp
AdventOfCode/2017/day8/: p1.cpp
AdventOfCode/2017/day9/: p1.cpp
AdventOfCode/2019/day1/: fuel.cpp  problem.txt
AdventOfCode/2019/day10/: p1.cpp  p2.cpp  problem.txt
AdventOfCode/2019/day11/: ElfComputer.cpp  input.txt  main.cpp  problem.txt
AdventOfCode/2019/day12/: input.txt  p1.cpp  p2.cpp  readme.txt  sample.txt  sample2.txt  sample3.txt
AdventOfCode/2019/day13/: .gitignore  ArcadeScreen.cpp  ArcadeScreen.h  ElfComputer.cpp  ElfComputer.h  compile.sh  game.txt  main.cpp  main2.cpp
AdventOfCode/2019/day14/: p1.cpp
AdventOfCode/2019/day15/: MazeCommon.cpp  MazeCommon.h  MazeLocation.cpp  MazeLocation.h  MazeSolver.cpp  MazeSolver.h  MazeViewer.cpp  MazeViewer.h  compile.sh  main.cpp  problem.txt
AdventOfCode/2019/day16/: pt1.cpp  sample.txt  sample2.txt  sample3.txt  sample4.txt
AdventOfCode/2019/day17/: .gitignore  ElfComputer.cpp  Scaffold.cpp  Scaffold.h  compile.sh  input.txt  main.cpp  path_pt2.txt
AdventOfCode/2019/day18/: .gitignore  Maze.cpp  Maze.h  MazeSolver.cpp  MazeSolver.h  MazeSolver2.cpp  MazeSolver2.h  compile.sh  main.cpp  sample4b.txt  sample4c.txt
AdventOfCode/2019/day19/: .gitignore  BeamDetector.cpp  BeamDetector.h  ElfComputer.cpp  compile.sh  main.cpp  problem.txt
AdventOfCode/2019/day2/: elfEmuPart2.cpp  problem.txt  sample1.txt
AdventOfCode/2019/day20/: .gitignore  Maze.cpp  Maze.h  compile.sh  main.cpp  problem.txt  sample1.txt
AdventOfCode/2019/day22/: .gitignore  cards.cpp
AdventOfCode/2019/day3/: input.txt  p1-slow.cpp  problem.txt
AdventOfCode/2020/: customstuff.cpp  customstuff.h  template.cpp
CellularSimulator/docs/: Cellular Simulator.doc  Presentation.ppt  README.txt
CellularSimulator/src/: CSim.java  CellMap.java  DialogPane.java  HelpDialog.java  HelpPane.java  ICell.java  ImageFilter.java  ImageMap.java  MouseList.java  NSWButtonListener.java  NewStateWindow.java  Scroller.java  SerializeIn.java  SerializeOut.java  SizeDialog.java  SizeHolder.java  StateList.java  StatesPanel.java  TWButtonListener.java  TWCBListener.java  TWListListener.java  TransitionA.java  TransitionB.java  TransitionC.java  TransitionD.java  TransitionE.java  TransitionHolder.java  TransitionWindow.java  help.txt  listen.java  pane.java  window.java
CodeJam/2017_Alphabet_Cake/: A-small-attempt1.in  A-small-attempt1.out  ac.cpp  input.txt  output.txt
CodeJam/2017_Bathroom_Stalls/: C-medium.in  C-small-1-attempt0.in  C-small.out  main.cpp
CodeJam/2017_Pancakes/: main.cpp
CodeJam/2017_Ratatouille/: rat.cpp
CodeJam/2017_TidyNumbers/: main.cpp
CodeJam/2019_Cryptopangrams/: Solution.java
CodeJam/2019_Forgone_Solution/: prob1.cpp  sample_input.txt
CodeJam/2019_You_Can_Go_Your_Own_Way/: prob2.cpp
CodeJam/CoinJam/: C-small-attempt0.out  c.sh  cj-checker.cpp  cj.cpp  expected.txt  input.txt  r.sh  readme.md
CodeJam/CountingSheep/: cs.cpp
CodeJam/GettingTheDigits/: gd.cpp  readme.md
CodeJam/RevengePancakes/: B-small-attempt0.out  expected.txt  rp.cpp
CodeJam/StoreCredit/: README  sc.cpp
CodeJam/Template/: template.cpp
CodeJam/TheLastWord/: .gitignore  lw.cpp  readme.txt  verify.txt
CodinGame/Practice/: ChuckNorris.cpp
HackingSchool/Level00/: Ex1_HelloWorld.sh  Ex2_MoreSecrets.sh  Ex3_Touching.sh  Ex4_Hello_World.sh
InlineAssembly/: readme.md
InlineAssembly/amd64/: test1.cpp
InteractivePython/: asteroids.py  blackjack.py  pong.py  stopwatch.py
InteractivePython/Memory/: game.py
LearnCMake/test1/: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  readme.md
LearnCMake/test1/mod_c/: c.h  (+2 more)
TestApps/BitfieldTest/: bft.cpp
ctf/: MicroCorruption-Vladivostok.md  MicroCorruption.md
sdl/: README.md
sdl/Asteroids/: .gitignore  AnimationDriver.cpp  AnimationDriver.h  Asteroids.cpp  Bullet.cpp  Bullet.h  CMakeLists.txt  CollisionManager.cpp  CollisionManager.cpp.autosave  CollisionManager.h  Command.cpp  Command.h  EventRecorder.cpp  EventRecorder.h  FrictionlessGraphic.cpp  FrictionlessGraphic.h  GameEntity.cpp  GameEntity.h  GameMath.cpp  GameMath.h  GraphicEntity.cpp  GraphicEntity.h  Graphics.cpp  Graphics.h  ICollidable.h  ILifetimeManager.h  ImageCache.cpp  ImageCache.h  ImageInfo.cpp  ImageInfo.h  Joystick.cpp  Joystick.h  Logger.cpp  Logger.h  Makefile  Mixer.cpp  Mixer.h  MovingEntity.cpp  MovingEntity.h  PauseScene.cpp  (+21 more)
sdl/Asteroids/doc/: doxygen.config
sdl/Asteroids/test/: BuildTest.cpp  CMakeLists.txt  CollisionManagerTest.cpp  MathTest.cpp  astest.cpp
sdl/scaled_graphics/: CMakeLists.txt  scaled_graphic.cpp  winbuild.bat
(+133 files in other folders)
